# rig

./: .gitignore  CHANGELOG.md  COPYRIGHT  README.md  build.sh  deprecated.sh  main.py  pyproject.toml  release.sh  rig.spec  test-installer.sh  worker.js  wrangler.toml
installers/: __init__.py  bootstrap.py  btop.py  certbot.py  chkrootkit.py  curlpad.py  dev_tools.py  fail2ban.py  fastfetch.py  git.py  github_cli.py  image_viewer.py  neovim.py  nginx.py  nodejs.py  pnpm.py  podman.py  rkhunter.py  ssh_key.py  ufw.py  uv.py  vrms.py  zsh.py
utils/: __init__.py  base.py  errors.py  logger.py  runner.py  shell_config.py  types.py
